# try_diesel_windows

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
cd/install/: macos.sh
migrations/2022-06-14-033534_create_users/: up.sql
src/: db.rs  main.rs  model.rs
